--- a/cap1.tex
+++ b/cap1.tex
@@ -4,7 +4,7 @@ A indústria de jogos digitais é um dos segmentos de entretenimento mais rentá
 
 Um segmento de jogo muito popular atualmente é o esporte eletrônico, mais conhecido como \textit{eSport} \cite{forbes1}. Conforme \cite{newzoo2}, o mercado de \textit{eSport} alcançou 493 milhões de dólares e uma audiência global de 191 milhões de entusiastas em 2016. O \textit{eSport} mais popular e mais rentável do mundo hoje é o League of Legends (LoL)  \cite{superdata1}, desenvolvido pela Riot Games, com cerca de 67 milhões de jogadores ativos e um pico diário de mais de 7,5 milhões de jogadores \textit{online} simultâneos \cite{riot1}.
 
-LoL é um jogo de arena de batalha \textit{online} para vários jogadores (\textit{Multiplayer Online Battle Arena} - MOBA), um subgênero de jogos digitais de estratégia em tempo real (\textit{Real-time Strategy} - RTS). Uma partida em um MOBA consiste em um cenário (mapa) em que duas equipes lutam entre si, a fim de destruir a base do oponente como o principal objetivo, sem limite de tempo. Um mapa simples contém três estradas principais (rotas) que conectam a base de cada equipe \fj{}{(Figura ~\ref{fig:map})}. Em geral, uma equipe tem cinco jogadores e cada um seleciona e controla um personagem, conhecidos como campeões ou heróis, com atributos e habilidades distintas. Além disso, as equipes também contam com a assistência de estruturas de defesa e unidades controladas por Inteligência Artificial (IA), conhecidos como \textit{minions} ou \textit{creeps}, para vencer a partida. Ao longo de uma partida, os personagens ganham ouro - que é usado para comprar itens que melhoraram seus atributos e habilidades - e pontos de experiência de várias maneiras, como matar unidades ou personagens e destruir estruturas da equipe inimiga \cite{league1}.
+LoL é um jogo de arena de batalha \textit{online} para vários jogadores (\textit{Multiplayer Online Battle Arena} - MOBA), um subgênero de jogos digitais de estratégia em tempo real (\textit{Real-time Strategy} - RTS). Uma partida em um MOBA consiste em um cenário (mapa) em que duas equipes lutam entre si, a fim de destruir a base do oponente como objetivo principal, sem limite de tempo. Um mapa simples contém três estradas principais (rotas) que conectam a base de cada equipe \fj{}{(Figura ~\ref{fig:map})}. Em geral, uma equipe tem cinco jogadores e cada um seleciona e controla um personagem, conhecidos como campeões ou heróis, com atributos e habilidades distintas. Além disso, as equipes também contam com a assistência de estruturas de defesa e unidades controladas por Inteligência Artificial (IA), conhecidos como \textit{minions} ou \textit{creeps}, para vencer a partida. Ao longo de uma partida, os personagens ganham ouro - que é usado para comprar itens que melhoraram seus atributos e habilidades - e pontos de experiência de várias maneiras, como matar unidades ou personagens e destruir estruturas da equipe inimiga \cite{league1}.
 
 \begin{figure*}
   \centering
@@ -15,7 +15,7 @@ LoL é um jogo de arena de batalha \textit{online} para vários jogadores (\text
 
 A grande diversidade e dinamicidade das ações dos personagens nas partidas \cite{drachen2014skill}, bem como seus desempenhos individuais (ou seja, ouro ganho, campeões abatidos ou derrotados, dano causado, cura recebida, etc.), tornam os MOBAs jogos muito competitivos. Em LoL, esta competitividade é ampliada devido à sua popularidade e torneios que fazem com que muitos jogadores se comportem como desportistas profissionais \cite{rioult2014mining}.
 
-Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar sua estratégia. Nesse sentido, uma alternativa que poderia ajudar essas equipes \fj{\'e}{seria} fornecer informações que levem a melhores decisões estratégicas no jogo. Um exemplo dessas informações poderia ser métricas de desempenho baseadas no comportamento de equipes bem-sucedidas. Com isso, as equipes poderiam monitorar seus desempenhos ao longo das partidas e verificar se estão no caminho correto ou não. \fj{}{Por exemplo, vamos supor que uma equipe n\~ao tenha focado em melhorar uma determinada m\'etrica de desempenho em suas partidas por algum motivo, como cura efetuada por minuto, no entanto, ao analisar o desempenho de equipes de sucesso, a equipe percebe que a pontua\c{c}\~ao da m\'etrica nas equipes de sucesso est\'a em um n\'ivel alto e que, portanto, pode ter alguma relev\^ancia para melhorar o seu desempenho nas partidas.}
+Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar suas estratégias. Nesse sentido, uma alternativa que poderia ajudar essas equipes \fj{\'e}{seria} fornecer informações que levem a melhores decisões estratégicas no jogo. Um exemplo dessas informações poderia ser métricas de desempenho baseadas no comportamento de equipes bem-sucedidas. Com isso, as equipes poderiam monitorar seus desempenhos ao longo das partidas e verificar se estão no caminho correto ou não. \fj{}{Por exemplo, vamos supor que uma equipe n\~ao tenha focado em melhorar uma determinada m\'etrica de desempenho em suas partidas por algum motivo, como cura efetuada por minuto, no entanto, ao analisar o desempenho de equipes de sucesso, a equipe percebe que a pontua\c{c}\~ao da m\'etrica nas equipes de sucesso est\'a em um n\'ivel alto e que, portanto, pode ter alguma relev\^ancia para melhorar o seu desempenho nas partidas.}
 
 Uma das abordagens para \fj{o}{a} criação de métricas de desempenho é o uso da mineração de dados \cite{el2016game}, que permite o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados para apoiar a tomada de decisões \cite{aggarwal2015data}.
 
@@ -261,7 +261,7 @@ A Riot Games, desenvolvedora do LoL, fornece uma Interface de Programação de A
   \label{tab:features-desc}
   \begin{tabular}{p{0.30\textwidth}p{0.65\textwidth}}
     \toprule
-    Feature & Description \\
+    Estatística & Descrição \\
     \midrule
 assists & Número de assistências em abates\\
 deaths & Número de mortes sofridas \\
@@ -318,7 +318,7 @@ wardsPlaced & Número de itens \textit{wards} usados\\
 
 \section{Extração de Características}
 
-Em seguida, extraímos características das partidas coletadas para modelar nosso conjunto de dados de desempenho de equipes \fj{}{$X$}. Seja $M$ um conjunto de histórico de partidas onde $|M|=110000$, $T$ um conjunto de equipes onde $|T|=|M| * 2=220000$, $P=\{p_1, \ldots, p_{|P|}\}$ um conjunto \fj{dimensional de}{de desempenho onde cada desempenho $p \in P$ desse conjunto é um vetor de $d=38$} estatísticas básicas de desempenho de um jogador em um partida\fj{}{, tais como \textit{kills}, \textit{mininonsKilled} e \textit{assists}} da Tabela ~\ref{tab:features-desc}. Uma partida consiste de duas equipes distintas $m=\{t_a,t_b\}$ e uma equipe é composta pelo desempenho de 5 jogadores distintos $t=\{p_k |  p_k \in P^t; P^t \supset P; 1 \geq k \leq 5\}$. Selecionamos as estatísticas de desempenho dos jogadores nas partidas e somamos cada estatística $P_j \in P$ por equipe para formar cada característica ou estatística $X_j \in X$ do nosso conjunto de desempenho de equipes \fj{}{$X_{220000, 38}$}, de modo que $X = \{ x_{i} = \sum_{k=1}^{5} p_{k}^{i} | t_{i} \in T; p_{k}^{i} \in P \}$.
+Em seguida, extraímos características das partidas coletadas para modelar nosso conjunto de dados de desempenho de equipes \fj{}{$X$}. Seja $M$ um conjunto de histórico de partidas onde $|M|=110000$, $T$ um conjunto de equipes onde $|T|=|M| * 2=220000$, $P=\{p_1, \ldots, p_{|P|}\}$ um conjunto \fj{dimensional de}{de desempenho onde cada desempenho $p \in P$ desse conjunto é um vetor de $d=38$} estatísticas básicas de desempenho de um jogador em um partida\fj{}{, tais como \textit{kills}, \textit{mininonsKilled} e \textit{assists}} da Tabela ~\ref{tab:features-desc}. Uma partida consiste de duas equipes distintas $m=\{t_a,t_b\}$ e uma equipe é composta pelo desempenho de 5 jogadores distintos $t=\{p_k |  p_k \in P^t; P^t \supset P; 1 \geq k \leq 5\}$. Selecionamos as estatísticas de desempenho dos jogadores nas partidas e somamos cada estatística $P_j \in P$ por equipe para formar cada característica ou estatística $X_j \in X$ do nosso conjunto de desempenho de equipes \fj{}{$X_{220000, 37}$}, de modo que $X = \{ x_{i} = \sum_{k=1}^{5} p_{k}^{i} | t_{i} \in T; p_{k}^{i} \in P \}$.
 
 Finalmente, para garantir a atomicidade no conjunto de dados $X$, decompomos algumas características, \fj{por exemplo}{ou seja}, subtraimos \textit{physicalDamageDealt} de \textit{physicalDamageDealtToChampions} para computar \textit{physicalDamageDealtToMonsters} \fj{}{(dano físico total causado a monstros)} e subtraímos \textit{magicDamageDealt} de \textit{magicDamageDealtToChampions} para computar \textit{magicDamageDealtToMonsters} \fj{}{(dano m\'agico total causado a monstros)}. Para evitar redundância nos dados, removemos também características compostas, por exemplo, características que são somatórios de outras:
 
@@ -346,7 +346,7 @@ Para evitar conclusões falsas, realizamos a limpeza de dados para detectar e re
 Às vezes, os valores de algumas características têm variância zero ou próxima de zero, o que implica que essas características \fj{s\~ao tamb\'em n\~ao}{n\~ao s\~ao} informativas e podem causar ruído ao executar uma determinada tarefa de mineração de dados. Portanto, realizamos uma estatística descritiva no conjunto de dados para identificar e remover características de variância zero ou próxima de zero. Após a análise, o conjunto de dados foi reduzido. As seguintes características foram removidas: \textit{doubleKills}, \textit{inhibitorKills}, \textit {largestMultiKill}, \textit{pentaKills}, \textit {quadraKills}, \textit {sightWardsBoughtInGame} e \textit{tripleKills}.
 
 \section{\fj{Detec\c{c}\~ao}{Remo\c{c}\~ao} de \textit{Outliers}}
-\fj{}{A Figura ~\ref{fig:boxplots} ilustra os gráficos dos \textit{boxplots} das caracter\'isticas do conjunto de desempenho de equipes $X$. Como podemos observar, existem muitos valores discrepantes (outliers)}. \fj{Utilizamos um Intervalo Interquartil de $fator = 1,5$ para encontrar os \textit{outliers} de cada caracter\'istica no conjunto de dados.}{} \fj{Equipes}{Então, equipes} com algum\fj{a}{\textit{outlier} em suas} \fj{caracter\'istica}{caracter\'isticas} \fj{an\^omala}{} foram removidas dos dados \fj{}{com base em um Intervalo Interquartil de $fator = 1,5$ para que o comportamento dos dados não fosse afetado de forma brusca}. 
+\fj{}{A Figura ~\ref{fig:boxplots} ilustra os gráficos dos \textit{boxplots} das caracter\'isticas do conjunto de desempenho de equipes $X$. Como podemos observar, existem muitos valores discrepantes (outliers)}. \fj{Utilizamos um Intervalo Interquartil de $fator = 1,5$ para encontrar os \textit{outliers} de cada caracter\'istica no conjunto de dados.}{} \fj{Equipes}{Então, equipes} com algum\fj{a}{\textit{outlier} em suas} \fj{caracter\'istica}{caracter\'isticas} \fj{an\^omala}{} foram removidas dos dados \fj{}{com base em um Intervalo Interquartil de $fator = 3,5$ para que o comportamento dos dados não fosse afetado de forma brusca}. 
 
 Em seguida, realizamos uma \fj{an\'alise para remover caracter\'isticas com baixa vari\^ancia novamente}{estat\'istica descritiva nos dados novamente e percebemos que algumas caracter\'isticas estavam com vari\^ancia pr\'oxima de zero}. Após \fj{a}{essa} análise, as seguintes características \fj{}{com vari\^ancia pr\'oxima de zero} foram removidas: \textit{totalUnitsHelead} e \textit{visionWardsBoughtInGame}.
 
@@ -376,7 +376,7 @@ Dessa forma, como discutimos na seção 2.2.1, as características do nosso conj
 Após a normalização, \fj{o}{as caracter\'isticas do} conjunto de dados $X$ \fj{assumiu}{assumiram} valores na faixa $[0, 1]$.
 
 \section{Análise de Redundância}
-\fj{Para identificar e remover caracter\'istica redundantes no conjunto de dados, realizamos uma an\'alise de correla\'c{c}\~ao.}{De modo a evitar ru\'idos e apriomorar o tempo de agrupamento dos dados, bem como facilitar a análise dos dados pelos usu\'arios finais, removemos as caracter\'istica redundantes do conjunto de dados por meio de uma an\'alise de correla\c{c}\~ao.} Com base no teste de correlação de Spearman \cite{xiao2015using}, consideramos que um par de características de alta ou altíssima correlação são redundantes. A Figura ~\ref{fig:correlations} ilustra o gráfico de correlação entre as $d=24$ características \fj{}{restantes} do conjunto de dados $X$ \fj{}{reduzido e transformado at\'e est\'a etapa}. De acordo com o gráfico, podemos observar que existem várias características redundantes.
+\fj{Para identificar e remover caracter\'istica redundantes no conjunto de dados, realizamos uma an\'alise de correla\'c{c}\~ao.}{De modo a evitar ru\'idos e aprimorar o tempo de agrupamento dos dados, bem como facilitar a análise dos dados pelos usu\'arios finais, removemos as caracter\'isticas mais redundantes do conjunto de dados por meio de uma an\'alise de correla\c{c}\~ao.} Com base no teste de correlação de Spearman \cite{xiao2015using}, consideramos que um par de características de alta ou altíssima correlação são redundantes. A Figura ~\ref{fig:correlations} ilustra o gráfico de correlação entre as $d=24$ características \fj{}{restantes} do conjunto de dados $X$ \fj{}{reduzido e transformado at\'e est\'a etapa}. De acordo com o gráfico, podemos observar que existem várias características redundantes.
 
 \begin{figure*}
   \centering
@@ -588,7 +588,7 @@ Portanto, propomos uma abordagem que passa por várias tarefas de preparação d
 
 Nossos resultados demonstram que as equipes das partidas coletadas compartilham diversas semelhanças e diferenças. Identificamos 7 \fj{grupos}{perfis} \fj{distintos de desempenho}{} de equipes que colocam em perspectiva tais semelhanças e diferenças de acordo com um conjunto de estatísticas sumarizadas e transformadas de desempenho de jogadores, tais como, quantidade de mortes, total de dano físico causado, total de cura efetuada, dentre outras. Calculamos, também, para cada \fj{grupo}{perfil}, a taxa de vitória e a taxa de derrota conforme a proporção de equipes vencedoras e derrotadas. Assim, categorizamos esses \fj{grupos}{perfis} em quatro níveis de taxa de vit\'oria da seguinte forma: muito baixo, moderado, alto e muito alto. Em relação à proporção da quantidade de equipes nos \fj{grupos}{perfis}, 28\% das equipes estão no Nível Muito Baixo, 36\% no Nível Moderado, 11\% no Nível Alto e 25\% no Nível Muito Alto. Quanto à relevância das características, as que parecem ter mais influência no comportamento dos \fj{grupos}{perfis} são \textit{deaths}, \textit{killSprees} e \textit{neutralMinionsKilledEnemyJungle}.
 
-\fj{}{Na categoria de N\'ivel Muito Alto de taxa de vit\'oria , encontramos equipes que normalmente apresentam níveis altos de \textit{killSprees}, \textit{minionsKilled}, \textit{neutralMinionsKilled}, \textit{totalHeal} e \textit{wardsPlaced}. Com base nos dados, podemos conceber que essas equipes usam uma estratégia baseada em maximizar a quantidade de minions abatidos por minuto (\textit{minionsKilled}), obtendo vantagem sobre o ouro - que se converte em itens - e pontos de experiência e, assim, aumentanado a probabilidade de \textit{kills} ao combater heróis inimigos. A categoria de N\'ivel Muito Baixo de taxa de vitória pode ser interpretado exatamente o oposto do N\'ivel Muito Alto. As equipes encontradas neste n\'ivel apresentam um nível muito baixo de \textit{minionsKilled}, sendo incapaz de obter itens e tornar-se vulnerável ao ataque dos oponentes. O N\'ivel Moderado apresenta baixos níveis de \textit{deaths}, \textit{magicDamageTaken} e \textit{trueDamageTaken}; isso pode indicar que as equipes desse n\'ivel se concentram muito em estrat\'egias de defesa. O N\'ivel Alto apresenta um n\'ivel baixo  de \textit{deaths}, mas um nível muito alto de \textit{magicDamageDeltToMonters} ou \textit{magicDamageDeltToChampions}; isso pode indicar que a principal estrat\'egia das equipes desse n\'ivel é o ataque surpresa, j\'a que eles n\~ao se concentram tanto em defesa mas possuem poucas mortes.}
+\fj{}{Na categoria de N\'ivel Muito Alto de taxa de vit\'oria , encontramos equipes que normalmente apresentam níveis altos de \textit{killSprees}, \textit{totalHeal} e \textit{wardsPlaced}. Com base nos dados, podemos conceber que essas equipes usam uma estratégia baseada em maximizar a quantidade de minions abatidos por minuto (\textit{minionsKilled}, \textit{neutralMinionsKilled}), obtendo vantagem sobre o ouro - que se converte em itens - e pontos de experiência e, assim, aumentanado a probabilidade de \textit{kills} ao combater heróis inimigos. A categoria de N\'ivel Muito Baixo de taxa de vitória pode ser interpretado exatamente o oposto do N\'ivel Muito Alto. As equipes encontradas neste n\'ivel apresentam um nível muito baixo de \textit{minionsKilled}, sendo incapaz de obter itens e tornar-se vulnerável ao ataque dos oponentes. O N\'ivel Moderado apresenta baixos níveis de \textit{deaths}, \textit{magicDamageTaken} e \textit{trueDamageTaken}; isso pode indicar que as equipes desse n\'ivel se concentram muito em estrat\'egias de defesa. O N\'ivel Alto apresenta um n\'ivel baixo  de \textit{deaths}, mas um nível muito alto de \textit{magicDamageDeltToMonters} ou \textit{magicDamageDeltToChampions}; isso pode indicar que a principal estrat\'egia das equipes desse n\'ivel é o ataque surpresa, j\'a que eles n\~ao se concentram tanto em defesa mas possuem poucas mortes.}
 
 As descobertas do nosso estudo sugerem alguns elementos muito concretos que podem ser usados para enriquecer as estratégias de equipes inexperientes de LoL. Ao analisar o desempenho dos perfis de sucesso, uma equipe inexperiente poderia avaliar suas métricas de desempenho nas partidas para apoiar suas decisões conforme o perfil em que mais se adequa.
 
