--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -60,7 +60,7 @@ showstringspaces=false
 
 \usepackage{url}
 \usepackage{soul}
-\newcommand{\fj}[2]{{\st{#1}  {\textbf{#2}}}}
+\newcommand{\fj}[2]{{#2}}
 % \sout{Hello World}
 
 
