change profile cat names and fix typos

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
-Despite the increasing popularity of electronic sports (eSports), there is still a scarcity of academic works exploring the playing behavior of teams. Understanding the features that help to discriminate between successful and unsuccessful teams would help teams improving their strategies, such as determine performance metrics to reach. In this dissertation, we identify and characterize team behavior patterns based on historical matches data from League of Legends, a very popular eSport. By applying methods from data mining, such as machine learning and statistical analysis, we clustered teams' performance and investigate for each cluster how and to what extent these features have an influence on teams' success and failure. \fj{The results of our study imply that some clusters are more likely to win than others and influence of the features are distinct for each one, which}{Some clusters are more likely to have winning teams than others, the results of our study helped to discover the characteristics that are associated with this predisposition and} allowed us to \fj{model}{define} performance metrics of successful and unsuccessful team profiles. At all, we found 7 \fj{clusters or}{profiles} in which were categorized into four levels in terms of winning team \fj{rate}{proportion}: very low, moderate, high and very high.
+Despite the increasing popularity of electronic sports (eSports), there is still a scarcity of academic works exploring the playing behavior of teams. Understanding the features that help to discriminate between successful and unsuccessful teams would help teams improving their strategies, such as determine performance metrics to reach. In this dissertation, we identify and characterize team behavior patterns based on historical matches data from League of Legends, a very popular eSport. By applying methods from data mining, such as machine learning and statistical analysis, we clustered teams' performance and investigate for each cluster how and to what extent these features have an influence on teams' success and failure. \fj{The results of our study imply that some clusters are more likely to win than others and influence of the features are distinct for each one, which}{Some clusters are more likely to have winning teams than others, the results of our study helped to discover the characteristics that are associated with this predisposition and} allowed us to \fj{model}{define} performance metrics of successful and unsuccessful team profiles. At all, we found 7 \fj{clusters or}{profiles} in which were categorized into four big levels in terms of winning team \fj{rate}{proportion}: Weak, So-So, Good and Top.
 
 \textbf{Keywords}: Data Mining, Clustering, Game Analytics, Online Games, MOBA Games, Team Performance
