--- a/resumo.tex
+++ b/resumo.tex
@@ -1,3 +1,3 @@
-Apesar da crescente popularidade dos esportes eletrônicos (eSports), ainda há uma escassez de trabalhos acadêmicos que exploram o comportamento de jogo das equipes. Compreender as características que ajudam discriminar entre equipes bem-sucedidas e malsucedidas poderia ajudar as equipes a melhorar suas estratégias, como determinar métricas de desempenho a serem alcançadas. Nesta dissertação, identificamos e caracterizamos padrões de comportamento de equipes com base nos dados de histórico de partidas de League of Legends, um \textit{eSport} muito popular. Ao aplicar métodos de mineração de dados, como aprendizado da máquina e análise estatística, agrupamos o desempenho das equipes e investigamos para cada grupo como e em que medida essas características influenciam o sucesso e fracasso das equipes. \fj{Os resultados do nosso estudo implicam que alguns grupos s\~ao mais propensos a ganhar do que outros e a influ\^encia das caracter\'{\i}sticas \'e distinta para cada um}{Alguns grupos s\~ao mais propensos a terem equipes mais vencedoras do que outros, os resultados do nosso estudo ajudaram a descobrir as caracter\'isticas que est\~ao associadas a essa propens\~ao}\fj{, o que}{ e} permitiram modelar métricas de desempenho de perfis de equipe bem-sucedidas e malsucedidas. Encontramos ao todo 7 \fj{grupos ou}{} perfis, que foram classificados em quatro níveis em termos de \fj{taxa}{proporção} de equipes vencedoras: muito baixo, moderado, alto e muito alto.
+Apesar da crescente popularidade dos esportes eletrônicos (eSports), ainda há uma escassez de trabalhos acadêmicos que exploram o comportamento de jogo das equipes. Compreender as características que ajudam discriminar entre equipes bem-sucedidas e malsucedidas poderia ajudar as equipes a melhorar suas estratégias, como determinar métricas de desempenho a serem alcançadas. Nesta dissertação, identificamos e caracterizamos padrões de comportamento de equipes com base nos dados de histórico de partidas de League of Legends, um \textit{eSport} muito popular. Ao aplicar métodos de mineração de dados, como aprendizado da máquina e análise estatística, agrupamos o desempenho das equipes e investigamos para cada grupo como e em que medida essas características influenciam o sucesso e fracasso das equipes. \fj{Os resultados do nosso estudo implicam que alguns grupos s\~ao mais propensos a ganhar do que outros e a influ\^encia das caracter\'{\i}sticas \'e distinta para cada um}{Alguns grupos s\~ao mais propensos a terem equipes mais vencedoras do que outros, os resultados do nosso estudo ajudaram a descobrir as caracter\'isticas que est\~ao associadas a essa propens\~ao}\fj{, o que}{ e} permitiram modelar métricas de desempenho de perfis de equipe bem-sucedidas e malsucedidas. Encontramos ao todo 7 \fj{grupos ou}{} perfis, que foram categorizados em quatro grandes níveis em termos de \fj{taxa}{proporção} de equipes vencedoras: Fraco, Mais ou Menos, Bom e Top.
 
 \textbf{Palavras-chave}: Mineração de Dados, Agrupamento, Análise de Jogos, Jogos \textit{Online}, Jogos MOBA, Desempenho da Equipes
